2014-07-30 Alexios Ghalanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.2-9.


2014-06-11 Alexios Ghalanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.2-8.
	* Removed fftw dependency
	* Fix to Copula-Student Simulation.
	* Added logical argument for inclusion or not of 'constant' 
	in varxfit function and updated related functions (filter,
	forecast and sim) to take this into account [user request].

2014-03-07 Alexios Ghalanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.2-7.
	* Fix to multivariate Student and Laplace random number generation for 
	DCC simulation methods.
	
2014-01-26 Alexios Ghalanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.2-6.
	* Fix for solaris build [thanks to BDR].

2014-01-25 Alexios Ghalanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.2-5.
	* Patched to work with recent changes to Rcpp.

2014-01-05 Alexios Ghalanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.2-4.
	* Implemented very fast flattened tensor indexing for
	the gogarch higher co-moment matrices using analytic
	relationship for coordinates of pairs {i=j,k=l}, leading
	to a 10x speed increase.
	* Huge efficiency gains (memory management) from using 
	the klin functionality for kronecker multiplication of 
	the very large co-moment matrices.
	* Fix to DCC estimation method for case of different univariate
	specifications (reported by Suzanna Linn).
	* Created and exported the betacovar, betacoskew and betacokurt 
	methods for higher moment CAPM beta calculation (discussed in 
	blog post).
	* Enanced DCC based models to accept the newly released realGARCH model
	from rugarch (additional argument realizedVol required).
	
2013-09-02 Alexios Ghalanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.2-3.
	* replaced estimation of Kendall's tau with cor.fk function of pcaPP
	package which is very fast (affects static mvt copula).